Collect/public/css/main.css
#tab-banner a {
    text-decoration: none;
    color: #666666;
}

#content {
    padding-right: 1vw;
    padding-left: 1vw;
    padding-top: 5vh;
}

.uk-input {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.hidden {
    visibility: hidden;
    display: none;
}

th {
    font-weight: bold !important;
}

#title {
    text-decoration: none;
    font-weight: bold;
    color: #000000;
    font-size: 3vh;
    white-space: nowrap;
}

.header-logo * {
    padding-left: 1vw;
    height: 5vh;
}

#load_spinner {
    padding-left: 1vw;
    height: 5vh;
}

.header {
    height: 5vh;
}

.notif_con {
    padding-right: 1vw;
}

form {
    padding-right: 10vw;
    padding-left: 10vw;
}

.button-submit {
    float: left;
    width: 55vw;
}

.button-reset {
    float: right;
    width: 20vw;
}


/* Adjustments for small screens */
@media screen and (max-width: 1024px) {
    form {
        padding-right: 1vw;
        padding-left: 1vw;
    }

    .header {
        height: 10vh;
    }

    #content {
        padding-top: 10vh;
    }

    .header-logo * {
        height: 10vh;
    }

    #load_spinner {
        height: 10vh;
    }

    .button-reset {
        padding-right: 20vw;
    }
}

